--- a/Clase 4/template/ejemplo/home.html
+++ b/Clase 4/template/ejemplo/home.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>sadasdsa</h1>
-    
-</body>
+    <link rel="stylesheet" href="/public/css/index.css" />
+    <script src="/public/js/index.js"></script>
+  </head>
+  <body>
+    <h1>Hola go</h1>
+    <h3 class="clase_rojo">titulo rojo</h3>
+    <img src="/public/images/golang.png" alt="curso go" onclick="saludar();" />
+  </body>
 </html>
