--- a/Clase 4/template/ejemplo/parametros.html
+++ b/Clase 4/template/ejemplo/parametros.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h2>parametros</h2>
+    <ul>
+      <li>ID: {{.id}}</li>
+      <li>SLUG: {{.slug}}</li>
+      <li>Texto: {{.texto}}</li>
+    </ul>
   </body>
 </html>
