--- a/Clase 4/template/ejemplo/query.html
+++ b/Clase 4/template/ejemplo/query.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2>querttyy</h2>
-</body>
+    <ul>
+      <li>ID: {{.id}}</li>
+      <li>SLUG: {{.slug}}</li>
+      <li>Texto: {{.texto}}</li>
+    </ul>
+  </body>
 </html>
